first commit at temp

--- a/index.html
+++ b/index.html
@@ -14,27 +14,71 @@
 
   <div class="main-container">
     <div class="sub-container">
-      <div class="box box-1">
-        <button class="roll-dice">Roll dice</button>
-        <button class="hold">Hold</button>
-      </div>
       <div class="box box-2">
-        <button class="roll-dice">Roll dice</button>
-        <button class="hold">Hold</button>
+        <div class="hidden-2">
+          <button class="roll-dice"><i class="fas fa-dice dice-icon"></i>Roll dice</button>
+          <button class="hold"><i class="fas fa-download hold-icon"></i>Hold</button>
+        </div>
+        <div class="current--2">
+          <h3>Current</h3>
+          <p class="current--2-score">0</p>
+        </div>
+        <div class="player--2">
+          <p class="player--2-heading">Player-2</p>
+          <p class="player--2-score">0</p>
+        </div>
+      </div>
+      <div class="box box-3">
+        <div class="hidden-3">
+          <button class="roll-dice"><i class="fas fa-dice dice-icon"></i>Roll dice</button>
+          <button class="hold"><i class="fas fa-download hold-icon"></i>Hold</button>
+        </div>
+        <div class="current--3">
+          <h3>Current</h3>
+          <p class="current--3-score">10</p>
+        </div>
+        <div class="player--3">
+          <p class="player--3-heading">Player-3</p>
+          <p class="player--3-score">0</p>
+        </div>
       </div>
     </div>
     <div class="sub-container">
-      <div class="box box-3">
-        <button class="roll-dice">Roll dice</button>
-        <button class="hold">Hold</button>
+      <div class="box box-1">
+        <div class="player--1">
+          <p class="player--1-heading">Player-1</p>
+          <p class="player--1-score">0</p>
+        </div>
+        <div class="current--1">
+          <h3>Current</h3>
+          <p class="current--1-score">0</p>
+        </div>
+        <div class="hidden-1">
+          <button class="roll-dice"><i class="fas fa-dice dice-icon"></i>Roll dice</button>
+          <button class="hold"><i class="fas fa-download hold-icon"></i>Hold</button>
+        </div>
+        
       </div>
       <div class="box box-4">
-        <button class="roll-dice">Roll dice</button>
-        <button class="hold">Hold</button>
+        <div class="player--4">
+          <p class="player--4-heading">Player-4</p>
+          <p class="player--4-score">0</p>
+        </div>
+        <div class="current--4">
+          <h3>Current</h3>
+          <p class="current--4-score">0</p>
+        </div>
+        <div class="hidden-4">
+          <button class="roll-dice"><i class="fas fa-dice dice-icon"></i>Roll dice</button>
+          <button class="hold"><i class="fas fa-download hold-icon"></i>Hold</button>
+        </div>
+        
       </div>
     </div>
   </div>
   <img src="./img/dice-6.png" alt="image not found" class="dice">
   
+
+  <script src="./js/script.js"></script>
 </body>
 </html>
