--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
   </div>
   <img src="./img/dice-6.png" alt="image not found" class="dice">
   
-  <div class="player-winning hide">
+  <!-- <div class="player-winning hide">
     <h1>Player-1 is the winner</h1>
-  </div>
+  </div> -->
 </div>
 <script src="./js/script.js"></script>
 </body>
