--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="main-container">
     <div class="sub-container">
       <div class="box box-2">
-        <div class="hidden-2">
+        <div class="roll-hold-container-2 hidden-2">
           <button class="roll-dice-2"><i class="fas fa-dice dice-icon"></i>Roll dice</button>
           <button class="hold-2"><i class="fas fa-download hold-icon"></i>Hold</button>
         </div>
@@ -32,7 +32,7 @@
         </div>
       </div>
       <div class="box box-3">
-        <div class="hidden-3">
+        <div class="roll-hold-container-3 hidden-3">
           <button class="roll-dice-3"><i class="fas fa-dice dice-icon"></i>Roll dice</button>
           <button class="hold-3"><i class="fas fa-download hold-icon"></i>Hold</button>
         </div>
@@ -56,7 +56,7 @@
           <h3>Current</h3>
           <p class="current--1-score">0</p>
         </div>
-        <div class="hidden-1">
+        <div class="roll-hold-container-1 hidden-1">
           <button class="roll-dice-1"><i class="fas fa-dice dice-icon"></i>Roll dice</button>
           <button class="hold-1"><i class="fas fa-download hold-icon"></i>Hold</button>
         </div>
@@ -71,7 +71,7 @@
           <h3>Current</h3>
           <p class="current--4-score">0</p>
         </div>
-        <div class="hidden-4">
+        <div class="roll-hold-container-4 hidden-4">
           <button class="roll-dice-4"><i class="fas fa-dice dice-icon"></i>Roll dice</button>
           <button class="hold-4"><i class="fas fa-download hold-icon"></i>Hold</button>
         </div>
